rook-ceph/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rook-ceph-mgr-dashboard-lb
  namespace: rook-ceph
  labels:
    app: rook-ceph-mgr
    rook_cluster: rook-ceph
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ceph.daleajackson.io
spec:
  selector:
    app: rook-ceph-mgr
    rook_cluster: rook-ceph
  type: LoadBalancer
  sessionAffinity: None
  ports:
  - name: dashboard
    protocol: TCP
    port: 8443
    targetPort: 8443
  externalTrafficPolicy: Local
